--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,53 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    
+    <!-- Main device body -->
+    <path android:fillColor="#2C2C2C"
+        android:pathData="M35,20 L73,20 Q78,20 78,25 L78,83 Q78,88 73,88 L35,88 Q30,88 30,83 L30,25 Q30,20 35,25 Z"/>
+    
+    <!-- Screen area -->
+    <path android:fillColor="#000000"
+        android:pathData="M36,26 L72,26 Q74,26 74,28 L74,42 Q74,44 72,44 L36,44 Q34,44 34,42 L34,28 Q34,26 36,26 Z"/>
+    
+    <!-- Screen highlight -->
+    <path android:fillColor="#1A1A1A"
+        android:pathData="M36,26 L72,26 Q74,26 74,28 L74,30 Q74,32 72,32 L36,32 Q34,32 34,30 L34,28 Q34,26 36,26 Z"/>
+    
+    <!-- Control wheel outer ring -->
+    <path android:fillColor="#3A3A3A"
+        android:pathData="M54,54m-18,0a18,18 0,1 1,36 0a18,18 0,1 1,-36 0"/>
+    
+    <!-- Control wheel inner area -->
+    <path android:fillColor="#4A4A4A"
+        android:pathData="M54,54m-14,0a14,14 0,1 1,28 0a14,14 0,1 1,-28 0"/>
+    
+    <!-- Center button -->
+    <path android:fillColor="#DDDDDD"
+        android:pathData="M54,54m-7,0a7,7 0,1 1,14 0a7,7 0,1 1,-14 0"/>
+    
+    <!-- Center button highlight -->
+    <path android:fillColor="#FFFFFF"
+        android:pathData="M54,54m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0"/>
+    
+    <!-- Control directional marks -->
+    <!-- Top mark -->
+    <path android:fillColor="#666666"
+        android:pathData="M53,42 L55,42 L55,46 L53,46 Z"/>
+    <!-- Right mark -->
+    <path android:fillColor="#666666"
+        android:pathData="M62,53 L66,53 L66,55 L62,55 Z"/>
+    <!-- Bottom mark -->
+    <path android:fillColor="#666666"
+        android:pathData="M53,62 L55,62 L55,66 L53,66 Z"/>
+    <!-- Left mark -->
+    <path android:fillColor="#666666"
+        android:pathData="M42,53 L46,53 L46,55 L42,55 Z"/>
+        
+    <!-- Device edge highlight -->
+    <path android:fillColor="#454545" 
+        android:pathData="M35,20 L73,20 Q78,20 78,25 L78,27 Q78,22 73,22 L35,22 Q30,22 30,27 L30,25 Q30,20 35,20 Z"/>
+        
 </vector>
