--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,22 +5,8 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     
-    <!-- Gradient background -->
-    <path android:pathData="M0,0h108v108h-108z">
-        <aapt:attr xmlns:aapt="http://schemas.android.com/aapt" name="android:fillColor">
-            <gradient
-                android:startX="0"
-                android:startY="0"
-                android:endX="108"
-                android:endY="108"
-                android:type="linear">
-                <item
-                    android:color="#F5F5F5"
-                    android:offset="0.0" />
-                <item
-                    android:color="#E0E0E0"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    <!-- Clean white background -->
+    <path android:fillColor="#FFFFFF"
+        android:pathData="M0,0h108v108h-108z" />
+    
 </vector>
