--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="anodized_green">#FF7CB342</color>
+    <color name="anodized_green_light">#FF8BC34A</color>
+    <color name="anodized_green_dark">#FF689F38</color>
 </resources>
